src/objects/BucketReport__c.object
<CustomObject>
    <fields>
        <fullName>ADER_IN__c</fullName>
        <label>ADER IN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADER_OUT__c</fullName>
        <label>ADER OUT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APPR_IN__c</fullName>
        <label>APPR IN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APPR_OUT__c</fullName>
        <label>APPR OUT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CNCL_In__c</fullName>
        <label>CNCL In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CNCL_Out__c</fullName>
        <label>CNCL Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CONS_In__c</fullName>
        <label>CONS In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CONS_Out__c</fullName>
        <label>CONS Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRDY_IN__c</fullName>
        <label>CRDY IN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRDY_Out__c</fullName>
        <label>CRDY Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>Commodity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Group__c</fullName>
        <label>Construction Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T200</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Phase__c</fullName>
        <label>Current Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Execute</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCNL_In__c</fullName>
        <label>DCNL In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DCNL_Out__c</fullName>
        <label>DCNL Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DEFR_In__c</fullName>
        <label>DEFR In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DEFR_Out__c</fullName>
        <label>DEFR Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DLCL_In__c</fullName>
        <label>DLCL In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DLCL_Out__c</fullName>
        <label>DLCL Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOCC_In__c</fullName>
        <label>DOCC In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOCC_Out__c</fullName>
        <label>DOCC Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DI</fullName>
                </value>
                <value>
                    <fullName>EI</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>GI</fullName>
                </value>
                <value>
                    <fullName>LI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERDY_IN__c</fullName>
        <label>ERDY IN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ERDY_OUT__c</fullName>
        <label>ERDY OUT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESTS_IN__c</fullName>
        <label>ESTS IN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESTS_OUT__c</fullName>
        <label>ESTS OUT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engineering_Estimate_Work_POST_In__c</fullName>
        <label>Engineering / Estimate WorkPOST In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engineering_Estimate_Work_POST_Out__c</fullName>
        <label>Engineering / Estimate Work POST Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FICL_In__c</fullName>
        <label>FICL In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FICL_Out__c</fullName>
        <label>FICL Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MAPP_In__c</fullName>
        <label>MAPP In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MAPP_Out__c</fullName>
        <label>MAPP Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MAT__c</fullName>
        <label>MAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>16D</fullName>
                </value>
                <value>
                    <fullName>29J</fullName>
                </value>
                <value>
                    <fullName>13H</fullName>
                </value>
                <value>
                    <fullName>18K</fullName>
                </value>
                <value>
                    <fullName>16O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPCL_In__c</fullName>
        <label>MPCL In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPCL_Out__c</fullName>
        <label>MPCL Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Main_WC__c</fullName>
        <label>Main WC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concord</fullName>
                </value>
                <value>
                    <fullName>Antioch</fullName>
                </value>
                <value>
                    <fullName>wision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Active_User_Status__c</fullName>
        <label>Notification Active User Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATCO</fullName>
                </value>
                <value>
                    <fullName>SUBM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Created_On__c</fullName>
        <label>Notification Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notification_Number__c</fullName>
        <label>Notification   Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_ActiveUser_Status__c</fullName>
        <label>Order ActiveUser Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNSC</fullName>
                </value>
                <value>
                    <fullName>MAPP srdy</fullName>
                </value>
                <value>
                    <fullName>SUBM</fullName>
                </value>
                <value>
                    <fullName>APPR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Created_On__c</fullName>
        <label>Order Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order  Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_TYPE__c</fullName>
        <label>Order TYPE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E060</fullName>
                </value>
                <value>
                    <fullName>G060</fullName>
                </value>
                <value>
                    <fullName>F060</fullName>
                </value>
                <value>
                    <fullName>D060</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PEND_IN__c</fullName>
        <label>PEND IN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PEND_OUT__c</fullName>
        <label>PEND OUT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PERC_In__c</fullName>
        <label>PERC In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PERC_Out__c</fullName>
        <label>PERC Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PROD_In__c</fullName>
        <label>PROD In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PROD_Out__c</fullName>
        <label>PROD Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Coast</fullName>
                </value>
                <value>
                    <fullName>Central West</fullName>
                </value>
                <value>
                    <fullName>Central East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponsibleFor_Order_Mgmt__c</fullName>
        <label>ResponsibleFor Order Mgmt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SRDY_In__c</fullName>
        <label>SRDY In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SRDY_Out__c</fullName>
        <label>SRDY Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UNSC_IN__c</fullName>
        <label>UNSC IN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UNSC_OUT__c</fullName>
        <label>UNSC OUT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UNSE_IN__c</fullName>
        <label>UNSE IN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UNSE_OUT__c</fullName>
        <label>UNSE OUT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Segment__c</fullName>
        <label>Work Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R02-Residental Single Family</fullName>
                </value>
                <value>
                    <fullName>060-Subdiv-&gt;=5lots,UGElec+Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BucketReport</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BucketReport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BucketReports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>